+Removed SimpleEngine.lib from linking properties of SimpleEngine

--- a/SimpleEngine/SimpleEngine.vcxproj
+++ b/SimpleEngine/SimpleEngine.vcxproj
@@ -134,7 +134,7 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>OIS_static_d.lib;ILU.lib;DevIL.lib;SimpleEngine.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OIS_static_d.lib;ILU.lib;DevIL.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Lib>
       <TargetMachine>MachineX86</TargetMachine>
