--- a/SimpleEngine/SimpleEngine.vcxproj
+++ b/SimpleEngine/SimpleEngine.vcxproj
@@ -239,7 +239,9 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     <ClInclude Include="Include\VertexFormats.h" />
     <ClInclude Include="Interface\ISimpleCamera2D.h" />
     <ClInclude Include="Interface\ISimpleEngine.h" />
+    <ClInclude Include="Interface\ISimpleObject.h" />
     <ClInclude Include="Interface\ISimpleRenderer.h" />
+    <ClInclude Include="Interface\ISimpleScene.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -249,7 +251,9 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     <ClCompile Include="Include\SimpleFactory.cpp" />
     <ClCompile Include="Interface\ISimpleCamera2D.cpp" />
     <ClCompile Include="Interface\ISimpleEngine.cpp" />
+    <ClCompile Include="Interface\ISimpleObject.cpp" />
     <ClCompile Include="Interface\ISimpleRenderer.cpp" />
+    <ClCompile Include="Interface\ISimpleScene.cpp" />
     <ClCompile Include="Src\SimpleAABB.cpp" />
     <ClCompile Include="Src\SimpleAnimatedSpriteRenderer.cpp" />
     <ClCompile Include="Src\SimpleID.cpp" />
