--- a/SimpleEngineTileEditor/SimpleEngineTileEditor.csproj
+++ b/SimpleEngineTileEditor/SimpleEngineTileEditor.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="SpriteControl.cs" />
     <Compile Include="SpriteSheetControl.cs" />
+    <Compile Include="TileMapControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
