--- a/SimpleEngineTileEditor/SimpleEngineTileEditor.csproj
+++ b/SimpleEngineTileEditor/SimpleEngineTileEditor.csproj
@@ -58,6 +58,7 @@
     <Compile Include="SimpleEngineViewerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="SimpleSpriteAnimationControl.cs" />
     <Compile Include="SpriteControl.cs" />
     <Compile Include="SpriteSheetControl.cs" />
     <Compile Include="TileMapControl.cs" />
