--- a/SimpleEngine/SimpleEngine.vcxproj
+++ b/SimpleEngine/SimpleEngine.vcxproj
@@ -243,6 +243,7 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     <ClInclude Include="Interface\ISimpleObject.h" />
     <ClInclude Include="Interface\ISimpleRenderer.h" />
     <ClInclude Include="Interface\ISimpleScene.h" />
+    <ClInclude Include="Interface\ISimpleSpriteAnimation.h" />
     <ClInclude Include="Interface\ISimpleSpriteRenderer.h" />
     <ClInclude Include="interface\ISimpleSpriteSheet.h" />
     <ClInclude Include="Interface\ISimpleSpriteSheetRenderer.h" />
@@ -259,6 +260,7 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     <ClCompile Include="Interface\ISimpleObject.cpp" />
     <ClCompile Include="Interface\ISimpleRenderer.cpp" />
     <ClCompile Include="Interface\ISimpleScene.cpp" />
+    <ClCompile Include="Interface\ISimpleSpriteAnimation.cpp" />
     <ClCompile Include="Interface\ISimpleSpriteRenderer.cpp" />
     <ClCompile Include="interface\ISimpleSpriteSheet.cpp" />
     <ClCompile Include="Interface\ISimpleSpriteSheetRenderer.cpp" />
