partial commit interop SimpleTextRenderer

--- a/SimpleEngine/SimpleEngine.vcxproj
+++ b/SimpleEngine/SimpleEngine.vcxproj
@@ -251,6 +251,7 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     <ClInclude Include="interface\ISimpleSpriteSheet.h" />
     <ClInclude Include="Interface\ISimpleSpriteSheetRenderer.h" />
     <ClInclude Include="interface\ISimpleAnimatedSpriteRenderer.h" />
+    <ClInclude Include="ISimpleTextRenderer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -269,6 +270,7 @@ copy /Y "$(ProjectDir)\External\devil\lib\ILU.dll" "$(TargetDir)"</Command>
     <ClCompile Include="interface\ISimpleSpriteSheet.cpp" />
     <ClCompile Include="Interface\ISimpleSpriteSheetRenderer.cpp" />
     <ClCompile Include="interface\ISimpleAnimatedSpriteRenderer.cpp" />
+    <ClCompile Include="ISimpleTextRenderer.cpp" />
     <ClCompile Include="Src\SimpleAABB.cpp" />
     <ClCompile Include="Src\SimpleAnimatedSpriteRenderer.cpp" />
     <ClCompile Include="Src\SimpleID.cpp" />
